<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_settings_tv_available_ships"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_settings_tv_available_ships"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_settings_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_settings_5"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_settings_edit_5"
        app:layout_constraintEnd_toEndOf="@+id/dialog_settings_tv_length"
        app:layout_constraintStart_toStartOf="@+id/dialog_settings_tv_length"
        app:layout_constraintTop_toBottomOf="@+id/dialog_settings_tv_length" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dialog_settings_guide_vertical_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/dialog_settings_edit_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/dialog_settings_default5"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/dialog_settings_tv_amount"
        app:layout_constraintStart_toStartOf="@+id/dialog_settings_tv_amount"
        app:layout_constraintTop_toBottomOf="@+id/dialog_settings_tv_amount" />

    <TextView
        android:id="@+id/dialog_settings_tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_main_tv_available_ships_length"
        app:layout_constraintEnd_toStartOf="@+id/dialog_settings_guide_vertical_center"
        app:layout_constraintTop_toBottomOf="@+id/dialog_settings_tv_available_ships" />

    <TextView
        android:id="@+id/dialog_settings_tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/activity_main_tv_available_ships_amount"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_settings_tv_length"
        app:layout_constraintStart_toStartOf="@+id/dialog_settings_guide_vertical_center"
        app:layout_constraintTop_toTopOf="@+id/dialog_settings_tv_length" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_settings_4"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_settings_edit_4"
        app:layout_constraintEnd_toEndOf="@+id/dialog_settings_tv_length"
        app:layout_constraintStart_toStartOf="@+id/dialog_settings_tv_length"
        app:layout_constraintTop_toTopOf="@+id/dialog_settings_edit_4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/dialog_settings_3"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_settings_edit_3"
        app:layout_constraintEnd_toEndOf="@+id/dialog_settings_tv_length"
        app:layout_constraintStart_toStartOf="@+id/dialog_settings_tv_length"
        app:layout_constraintTop_toTopOf="@+id/dialog_settings_edit_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_settings_2"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_settings_edit_2"
        app:layout_constraintEnd_toEndOf="@+id/dialog_settings_tv_length"
        app:layout_constraintStart_toStartOf="@+id/dialog_settings_tv_length"
        app:layout_constraintTop_toTopOf="@+id/dialog_settings_edit_2" />

    <EditText
        android:id="@+id/dialog_settings_edit_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/dialog_settings_default4"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/dialog_settings_edit_5"
        app:layout_constraintStart_toStartOf="@+id/dialog_settings_edit_5"
        app:layout_constraintTop_toBottomOf="@+id/dialog_settings_edit_5" />

    <EditText
        android:id="@+id/dialog_settings_edit_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/dialog_settings_default3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/dialog_settings_edit_4"
        app:layout_constraintStart_toStartOf="@+id/dialog_settings_edit_4"
        app:layout_constraintTop_toBottomOf="@+id/dialog_settings_edit_4" />

    <EditText
        android:id="@+id/dialog_settings_edit_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="1"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/dialog_settings_default2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/dialog_settings_edit_3"
        app:layout_constraintStart_toStartOf="@+id/dialog_settings_edit_3"
        app:layout_constraintTop_toBottomOf="@+id/dialog_settings_edit_3" />

    <TextView
        android:id="@+id/dialog_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dialog_settings_tv_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_settings_tv_table_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_settings_tv_table_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_settings_edit_2" />

    <EditText
        android:id="@+id/dialog_settings_edit_table_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/dialog_settings_default_size"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_settings_tv_table_size" />

</androidx.constraintlayout.widget.ConstraintLayout>